--- a/css/product.css
+++ b/css/product.css
@@ -1,6 +1,5 @@
 body{
     font-family: 'Poppins', sans-serif;
-    background-color: white;
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
@@ -46,13 +45,14 @@ body{
 .checked{
     color: orange;
 }
-.detail_prices {
+.prices {
     display: flex;
     margin-bottom: 26px;
     margin-top: 20px;
     margin-left:0px;
     color: #ff4136;
     font-size: 30px;
+    font-weight: bold;
 }
 .btn {
     display: flex;
@@ -67,9 +67,12 @@ body{
     text-align: center;
     width: 44px;
     transition: 0.3s;
+    background: #e25049;
+    
+
 }
 .btn.buy_now_btn a {
-    color: #4b4b4b;
+    color: #fff;
     font-size: 14px;
     text-transform: uppercase;
     width: 175px;
@@ -89,6 +92,7 @@ body{
     display: flex;
     justify-content: center;
 }
+
 .product_deatils_tab li a {
     color: #505050;
     font-size: 20px;
@@ -183,6 +187,7 @@ body{
     margin-bottom: 10px;
     margin-left: -60px;
 }
+
 .review_box {
     margin-top: 35px;
 }
@@ -190,6 +195,8 @@ body{
     display: flex;
     margin-bottom: 30px;
     margin-left: 100px;
+    margin-right: 100px;
+    width: 80%;
 }
 .review-box.name input {
     border: 1px solid #999;
@@ -207,28 +214,7 @@ body{
     padding-left: 20px;
     
 }
-.review-btn {
-    margin-top: 30px;
-}
-.review-btn a.fv-btn {
-    border: 1px solid #999;
-    display: inline-block;
-    font-size: 16px;
-    height: 40px;
-    line-height: 37px;
-    padding: 0 28px;
-    text-transform: uppercase;
-    transition: 0.4s;
-    color: #4b4b4b;
-    margin-bottom: 10%;
-}
-.review-btn a.fv-btn:hover{
-    border: 1px solid #ff4136;
-    background: #ff4136 ;
-    color: #fff;
-    text-decoration: none;
 
-}
 .review-box textarea::-moz-placeholder {
   color: #333 !important;
   opacity: 1 !important;
