--- a/css/custom.css
+++ b/css/custom.css
@@ -27,3 +27,21 @@
 .futer a{
     color: white
 }
+.btn-orange {
+    color: #fff;
+    background-color: #EE5A24;
+    border-color: #EE5A24;
+  }
+  
+  .btn-orange:hover {
+    color: #fff;
+    background-color: #c23616;
+    border-color: #c23616;
+  }
+  
+  .btn-orange:focus, .btn-orange.focus {
+    color: #fff;
+    background-color: #c23616;
+    border-color: #c23616;
+    box-shadow: 0 0 0 0.2rem rgba(72, 180, 97, 0.5);
+  }
